--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<base href="/" />
+		<base href="./" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 		<title>Commenting system</title>
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="./src/app.ts" type="module"></script>
+		<script type="module" src="./src/app.ts"></script>
 	</body>
 </html>
