--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="/src/app.ts"></script>
+		<script type="text/javascript" src="./src/app.ts"></script>
+		<script type="module" src="./src/app.ts"></script>
 	</body>
 </html>
