--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<body>
 		<div id="app"></div>
 
-		<script type="module" src="./src/app.ts"></script>
+		<script type="module" src="./src/app"></script>
 	</body>
 </html>
